fixed the image spacing issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -2897,11 +2897,11 @@ footer#footer {
 }
 /* line 328, ../sass/components/_pages.scss */
 .syllabus_profile .institute_description_information {
-  float: right;
+  float: left;
   padding-top: .3em;
   font-size: 21px;
   font-size: 1.3125rem;
-  padding-right: 200px;
+  margin-left: 50px;
 }
 /* line 335, ../sass/components/_pages.scss */
 .syllabus_profile .course_description {
@@ -3283,6 +3283,11 @@ footer#footer {
 /* line 675, ../sass/components/_pages.scss */
 footer .field-name-field-plagiarism-text {
   page-break-inside: avoid;
+}
+
+/* line 682, ../sass/components/_pages.scss */
+.field-name-field-general-objectives ul {
+  padding-left: 1em;
 }
 
 /**
